// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Tabs Collapsed renders 1`] = `
<React.Fragment>
  <h2
    id="collapsed"
  >
    Collapsed
  </h2>
  <p>
    Collapsed... 
    <code
      className="token property"
    >
      .tabs
    </code>
    ...
    <code
      className="token property"
    >
      .tabs-collapsed
    </code>
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      items={
        Array [
          Object {
            "active": false,
            "name": "Tab #1",
          },
          Object {
            "active": true,
            "name": "Tab #2",
          },
          Object {
            "active": false,
            "name": "Tab #3",
          },
        ]
      }
      mode="collapsed"
    />
  </ComponentPreview>
</React.Fragment>
`;

exports[`Components: Tabs Overview renders 1`] = `
<React.Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Overview... 
    <code
      className="token property"
    >
      .tabs
    </code>
    ...
    <code
      className="token property"
    >
      .tabs-auto
    </code>
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      items={
        Array [
          Object {
            "active": false,
            "name": "Tab #1",
          },
          Object {
            "active": true,
            "name": "Tab #2",
          },
          Object {
            "active": false,
            "name": "Tab #3",
          },
        ]
      }
      mode="auto"
    />
  </ComponentPreview>
</React.Fragment>
`;

exports[`Components: Tabs Stacked renders 1`] = `
<React.Fragment>
  <h2
    id="stacked"
  >
    Stacked
  </h2>
  <p>
    Stacked... 
    <code
      className="token property"
    >
      .tabs
    </code>
    ...
    <code
      className="token property"
    >
      .tabs-stacked
    </code>
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      items={
        Array [
          Object {
            "active": false,
            "name": "Tab #1",
          },
          Object {
            "active": true,
            "name": "Tab #2",
          },
          Object {
            "active": false,
            "name": "Tab #3",
          },
        ]
      }
      mode="stacked"
    />
  </ComponentPreview>
</React.Fragment>
`;

exports[`Components: Tabs TabsText renders 1`] = `
<div
  className="col-md-12 col-lg-10 doc-body"
>
  <p
    className="lead"
  >
    Tabs...
  </p>
  <Overview />
  <Stacked />
  <Collapsed />
</div>
`;

exports[`Components: Tabs renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <TabsText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
